force-app/main/default/objects/Link__mdt/Link__mdt.object-meta.xml
<CustomObject>
    <label>External Link</label>
    <pluralLabel>External Links</pluralLabel>
</CustomObject>