force-app/main/default/objects/Link__mdt/fields/About__c.field-meta.xml
<CustomField>
    <fullName>About__c</fullName>
    <label>About</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>