force-app/main/default/objects/Link__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <defaultValue>&#39;standard:data_integration_hub&#39;</defaultValue>
    <label>Icon</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>